--- a/style.css
+++ b/style.css
@@ -152,7 +152,8 @@ body {
 }
 
 .card {
-  width: 25%;
+  position: relative;
+  width: 22%;
   background-color: rgb(169, 186, 189);
   border-radius: 10%;
   /* display: flex;
@@ -163,11 +164,19 @@ body {
 }
 
 .card img {
-    /* Optional: If you want to center the image within the container, set margin to auto */
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    /* Optional: Add additional styles for the image, such as a border or shadow */
+  /* Optional: If you want to center the image within the container, set margin to auto */
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  /* Optional: Add additional styles for the image, such as a border or shadow */
+}
+
+.overlay-image {
+  position: absolute;
+  top: 0;    
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .back-to-menu {
